// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingAddress renders BillingAddress component 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--BillingAddress"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Billing address
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio-field__radio"
          >
            <input
              aria-checked="false"
              class="stx-radio__input"
              id="stxField1"
              name="billing-address"
              role="radio"
              type="radio"
              value="SAME_AS_SHIPPING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField1"
          >
            Same as shipping address
          </label>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio--is-checked stx-radio-field__radio"
          >
            <input
              aria-checked="true"
              checked=""
              class="stx-radio__input"
              id="stxField2"
              name="billing-address"
              role="radio"
              type="radio"
              value="DIFFERENT_BILLING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField2"
          >
            Use a different billing address
          </label>
        </div>
      </div>
      <div
        class="FieldSet--Address"
      >
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--FirstName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField3"
                name="first_name"
                placeholder="First name (optional)"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--LastName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField4"
                name="last_name"
                placeholder="Last name (optional)"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Company"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField5"
                name="business_name"
                placeholder="Company (optional)"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Address"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField6"
                name="address_line_1"
                placeholder="Address (optional)"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Address2"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField7"
                name="address_line_2"
                placeholder="Apt, suite, etc."
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--City"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField8"
                name="city"
                placeholder="City (optional)"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-select SelectField Field--Country"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                class="stx-select__select-element"
                id="stxField9"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a country
                </option>
                <option
                  value="CA"
                >
                  Canada
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Phone"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField10"
                name="phone_number"
                placeholder="Phone (optional)"
                type="tel"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BillingAddress renders BillingAddress component with errors 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--BillingAddress"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Billing address
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio-field__radio"
          >
            <input
              aria-checked="false"
              class="stx-radio__input"
              id="stxField11"
              name="billing-address"
              role="radio"
              type="radio"
              value="SAME_AS_SHIPPING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField11"
          >
            Same as shipping address
          </label>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio--is-checked stx-radio-field__radio"
          >
            <input
              aria-checked="true"
              checked=""
              class="stx-radio__input"
              id="stxField12"
              name="billing-address"
              role="radio"
              type="radio"
              value="DIFFERENT_BILLING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField12"
          >
            Use a different billing address
          </label>
        </div>
      </div>
      <div
        class="FieldSet--Address"
      >
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--alert stx-field--with-input Field Field--FirstName"
          >
            <div
              class="stx-input stx-input--alert"
            >
              <input
                class="stx-input__input-element"
                id="stxField13"
                name="first_name"
                placeholder="First name (optional)"
                type="text"
                value=""
              />
            </div>
            <div
              class="stx-field__message"
            >
              Enter a first name
            </div>
          </div>
          <div
            class="stx-field stx-field--alert stx-field--with-input Field Field--LastName"
          >
            <div
              class="stx-input stx-input--alert"
            >
              <input
                class="stx-input__input-element"
                id="stxField14"
                name="last_name"
                placeholder="Last name (optional)"
                type="text"
                value=""
              />
            </div>
            <div
              class="stx-field__message"
            >
              Enter a last name
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--alert stx-field--with-input Field Field--Company"
          >
            <div
              class="stx-input stx-input--alert"
            >
              <input
                class="stx-input__input-element"
                id="stxField15"
                name="business_name"
                placeholder="Company (optional)"
                type="text"
                value=""
              />
            </div>
            <div
              class="stx-field__message"
            >
              Enter a company name
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Address"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField16"
                name="address_line_1"
                placeholder="Address (optional)"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Address2"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField17"
                name="address_line_2"
                placeholder="Apt, suite, etc."
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--City"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField18"
                name="city"
                placeholder="City (optional)"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--alert stx-field--with-select SelectField Field--Country"
          >
            <div
              class="stx-select stx-select--with-placeholder stx-select--alert"
            >
              <select
                class="stx-select__select-element"
                id="stxField19"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a country
                </option>
                <option
                  value="CA"
                >
                  Canada
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
            <div
              class="stx-field__message"
            >
              Select a country
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--alert stx-field--with-input Field Field--Phone"
          >
            <div
              class="stx-input stx-input--alert"
            >
              <input
                class="stx-input__input-element"
                id="stxField20"
                name="phone_number"
                placeholder="Phone (optional)"
                type="tel"
                value=""
              />
            </div>
            <div
              class="stx-field__message"
            >
              Enter a phone number
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BillingAddress renders BillingAddress component with pre-filled data 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--BillingAddress"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Billing address
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio-field__radio"
          >
            <input
              aria-checked="false"
              class="stx-radio__input"
              id="stxField21"
              name="billing-address"
              role="radio"
              type="radio"
              value="SAME_AS_SHIPPING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField21"
          >
            Same as shipping address
          </label>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio--is-checked stx-radio-field__radio"
          >
            <input
              aria-checked="true"
              checked=""
              class="stx-radio__input"
              id="stxField22"
              name="billing-address"
              role="radio"
              type="radio"
              value="DIFFERENT_BILLING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField22"
          >
            Use a different billing address
          </label>
        </div>
      </div>
      <div
        class="FieldSet--Address"
      >
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--FirstName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField23"
                name="first_name"
                placeholder="First name (optional)"
                type="text"
                value="John"
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--LastName"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField24"
                name="last_name"
                placeholder="Last name (optional)"
                type="text"
                value="Doe"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Company"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField25"
                name="business_name"
                placeholder="Company (optional)"
                type="text"
                value="Bold Commerce"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Address"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField26"
                name="address_line_1"
                placeholder="Address (optional)"
                type="text"
                value="123 Fake Street"
              />
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Address2"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField27"
                name="address_line_2"
                placeholder="Apt, suite, etc."
                type="text"
                value="Unit 12"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--City"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField28"
                name="city"
                placeholder="City (optional)"
                type="text"
                value="Winnipeg"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-select SelectField Field--Country"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                class="stx-select__select-element"
                id="stxField29"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a country
                </option>
                <option
                  value="CA"
                >
                  Canada
                </option>
                <option
                  value="US"
                >
                  United States
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="stx-field stx-field--with-select SelectField Field--Province"
          >
            <div
              class="stx-select stx-select--with-placeholder"
            >
              <select
                class="stx-select__select-element"
                id="stxField31"
              >
                <option
                  hidden=""
                  value="___PLACEHOLDER___"
                >
                  Select a province
                </option>
                <option
                  value="AB"
                >
                  Alberta
                </option>
                <option
                  value="BC"
                >
                  British Columbia
                </option>
                <option
                  value="MB"
                >
                  Manitoba
                </option>
                <option
                  value="NB"
                >
                  New Brunswick
                </option>
                <option
                  value="NL"
                >
                  Newfoundland and Labrador
                </option>
                <option
                  value="NT"
                >
                  Northwest Territories
                </option>
                <option
                  value="NS"
                >
                  Nova Scotia
                </option>
                <option
                  value="NU"
                >
                  Nunavut
                </option>
                <option
                  value="ON"
                >
                  Ontario
                </option>
                <option
                  value="PE"
                >
                  Prince Edward Island
                </option>
                <option
                  value="QC"
                >
                  Quebec
                </option>
                <option
                  value="SK"
                >
                  Saskatchewan
                </option>
                <option
                  value="YT"
                >
                  Yukon Territory
                </option>
              </select>
              <span
                class="stx-select__icon"
              >
                <svg
                  class="stx-select-icon__icon"
                  viewBox="0 0 24 24"
                >
                  <path
                    class="stx-select-icon__path"
                    d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                    fill="#6B6B6B"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="stx-field stx-field--with-input Field Field--Postal_Code"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField32"
                name="postal"
                placeholder="Postal code / ZIP"
                type="text"
                value="R3A1B3"
              />
            </div>
          </div>
        </div>
        <div
          class="FieldGroup"
        >
          <div
            class="stx-field stx-field--with-input Field Field--Phone"
          >
            <div
              class="stx-input"
            >
              <input
                class="stx-input__input-element"
                id="stxField30"
                name="phone_number"
                placeholder="Phone (optional)"
                type="tel"
                value="204-123-4567"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BillingAddress renders BillingAddress component with required fields 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--BillingAddress"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Billing address
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio--is-checked stx-radio-field__radio"
          >
            <input
              aria-checked="true"
              checked=""
              class="stx-radio__input"
              id="stxField35"
              name="billing-address"
              role="radio"
              type="radio"
              value="SAME_AS_SHIPPING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField35"
          >
            Same as shipping address
          </label>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio-field__radio"
          >
            <input
              aria-checked="false"
              class="stx-radio__input"
              id="stxField36"
              name="billing-address"
              role="radio"
              type="radio"
              value="DIFFERENT_BILLING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField36"
          >
            Use a different billing address
          </label>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`BillingAddress renders BillingAddress component with same as shipping selected 1`] = `
<DocumentFragment>
  <section
    class="FieldSet FieldSet--BillingAddress"
  >
    <div
      class="FieldSet__Header"
    >
      <div
        class="FieldSet__Heading"
      >
        Billing address
      </div>
    </div>
    <div
      class="FieldSet__Content"
    >
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio--is-checked stx-radio-field__radio"
          >
            <input
              aria-checked="true"
              checked=""
              class="stx-radio__input"
              id="stxField33"
              name="billing-address"
              role="radio"
              type="radio"
              value="SAME_AS_SHIPPING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField33"
          >
            Same as shipping address
          </label>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-radio-field RadioButton"
      >
        <div
          class="stx-radio-field"
        >
          <span
            class="stx-radio stx-radio-field__radio"
          >
            <input
              aria-checked="false"
              class="stx-radio__input"
              id="stxField34"
              name="billing-address"
              role="radio"
              type="radio"
              value="DIFFERENT_BILLING_ADDRESS"
            />
            <span
              class="stx-radio__box"
            />
          </span>
          <label
            class="stx-radio-field__label"
            for="stxField34"
          >
            Use a different billing address
          </label>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
